fixed alignment issues

--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -3,9 +3,7 @@ footer{
     color: white;
 }
 
-.footer2{
-    padding-left: 100px;
-}
+
 
 .footer3{
     border-top: 2px solid white; 
